--- a/src/style.css
+++ b/src/style.css
@@ -1,7 +1,8 @@
 h2 {
-  @apply bg-green-600 text-white py-2 px-8 font-bold;
+  @apply windi-bg-green-600 windi-text-white wnidi-py-2 windi-px-8 windi-font-bold;
 }
 
+/* you can still use @apply without prefix if you want */
 @screen xl {
   h2 {
     @apply bg-blue-500;
